# Article-Search-Engine

./: AVLMap.cpp  AVLMap.h  AVLTree.h  CMakeCache.txt  CMakeDirectoryInformation.cmake  CMakeLists.txt  CMakeRuleHashes.txt  CTestTestfile.cmake  DartConfiguration.tcl  DocumentParser.cpp  DocumentParser.h  FinalProjExamples.cbp  IndexHandler.cpp  IndexHandler.h  Makefile  Makefile.cmake  Makefile2  README.md  TargetDirectories.txt  UserInterface.cpp  UserInterface.h  Word.cpp  Word.h  build.ninja  clion-log.txt  cmake_install.cmake  documentID.cpp  documentID.h  documentation.md  rapidJSONExample  rapidJSONExample.cpp  stopwords.txt  supersearch  test.cpp
Continuous.dir/: build.make
ContinuousBuild.dir/: build.make
ContinuousConfigure.dir/: build.make
ContinuousCoverage.dir/: build.make
ContinuousMemCheck.dir/: build.make
ContinuousStart.dir/: build.make
ContinuousSubmit.dir/: build.make
ContinuousTest.dir/: build.make
ContinuousUpdate.dir/: build.make
Experimental.dir/: build.make
ExperimentalBuild.dir/: build.make
ExperimentalConfigure.dir/: build.make
ExperimentalCoverage.dir/: build.make
ExperimentalMemCheck.dir/: build.make
ExperimentalStart.dir/: build.make
ExperimentalSubmit.dir/: build.make
ExperimentalTest.dir/: build.make
ExperimentalUpdate.dir/: build.make
Nightly.dir/: build.make
NightlyBuild.dir/: build.make
NightlyConfigure.dir/: build.make
NightlyCoverage.dir/: build.make
NightlyMemCheck.dir/: build.make
NightlyMemoryCheck.dir/: build.make
NightlyStart.dir/: build.make
NightlySubmit.dir/: build.make
(+34 files in other folders)
